# res-project

./: .gitignore  .gitmodules  Makefile  README.md  flake.nix  hex.py  pyserial.py  vhdl_ls.toml
hardware/: Makefile  constraints.xdc  main.vhd  main_tb.vhd  vhdl_ls.toml
hardware/src/: Palette.vhd  PixelClock.vhd  UART.vhd  bram.vhd  btn_pulse_detector.vhd  cpu_bram.vhd  fifo.vhd  game_physics_engine.vhd  game_pkg.vhd  image_data_pkg.vhd  interrupt_per.vhd  led_per.vhd  messager.vhd  receiver.vhd  trap_uart_monitor.vhd  uart_wb.vhd  vga_controller.vhd  vga_pixel_pipeline.vhd  vga_subsystem.vhd  vga_timing_generator.vhd  wishbone_game_interface.vhd
scripts/: hex.py  pyserial.py
software/: Cargo.toml  rust-toolchain.toml
software/application/: Cargo.toml  app.ld  build.rs
software/application/src/: interrupts.rs  main.rs  start.S
software/bootloader/: Cargo.toml  boot.ld  build.rs
software/bootloader/src/: main.rs  start.S
software/pac/: Cargo.toml
software/pac/src/: leds.rs  lib.rs  panic.rs  uart.rs  vga.rs  wdt.rs
software/panic-application/: Cargo.toml
software/panic-application/src/: lib.rs
software/panic-bootloader/: Cargo.toml
software/panic-bootloader/src/: lib.rs
software/protocol/src/: lib.rs
